# dqw-optimizer

./: README.md  pyproject.toml
app/: main.py  optimizer.py
