[tool.poetry]
name = "dqw-optimizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
numpy = "^1.22.2"
pandas = "^1.4.1"
PuLP = "^2.6.0"
jupyterlab = "^3.2.9"
ipython = "^8.0.1"
tqdm = "^4.62.3"
streamlit = "^1.5.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
